--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,30 @@ body{
 	font-family: comic;
 	src: url('../../assets/fonts/Fat Tats.ttf');     	 
 }
-h1,h2,h3,h4,h5,h6{
+h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 	font-family:inherit;
 }
+.container{
+	max-width:1000px;
+}
 .jumbotron{	
-	color:#fff;
 	margin-bottom:0;
 	border-bottom:1px solid grey;
 	background:url(../../assets/images/7.jpg) no-repeat top left;
+	color:#fff;
 }
-.jumbotron h1{
+h1{
 	font-family:comic;
-	text-shadow: 0 2px 2px #ddd;
+}
+.list-group-item-heading{
+	font-weight:bold;
+}
+.pricing-plan li{
+	border-bottom:1px solid #ddd;
+	vertical-align:baseline;
+}
+.text-center{
+	line-height:30px;
 }
 .img-responsive{
 	margin:auto;
@@ -25,11 +37,16 @@ h1,h2,h3,h4,h5,h6{
 	background: linear-gradient(20deg,#49546F 30%,#3A6D85 87%,#435e67 100%);
 	background-attachment: fixed;
 	background-color: #1c2533;
+	color:#fff;
 }
 .bgMixing2{
 	background: linear-gradient(20deg,#3C455A 30%,#305C70 87%,#293B41 100%);
 	background-attachment: fixed;
 	background-color: #1F2836;
+	color:#fff;
+}
+.bgNothing{
+	background:none;
 }
 .navbar-default {
 	/*background-color: #3E5770;
@@ -39,6 +56,7 @@ h1,h2,h3,h4,h5,h6{
 .navbar-default .navbar-nav > li > a,
 .navbar-default .navbar-nav > li > a:hover {
 	color: #ffffff;
+	margin:0 10px;
 }
 .form-group > .text-danger{
 	display:none;
@@ -59,7 +77,7 @@ li{
 	width:100%;
 	margin-bottom:12px;
 }
-.hellip{
+.hellip1{
 	white-space:nowrap;
 	overflow:hidden;
 	text-overflow:ellipsis;
