--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 }
 .jumbotron{	
 	margin-bottom:0;
-	border-bottom:1px solid grey;
+	border-bottom:1px solid #ddd;
 	background:url(../images/banner-bg.gif) no-repeat top right;
 	color:#fff;
 }
